# prisma

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Pipfile  README.md  SECURITY.md  TODO.md  config.example.yaml  find_pipenv.bat  prisma.code-workspace  pyproject.toml  setup_windows_env.bat
.claude/: CLAUDE.md
docs/: ADR-001-simple-pipeline-architecture.md  ADR-002-research-documentation-standards.md  ADR-003-direct-composition.md  ADR-004-simple-cli-interface.md  ADR-005-sequential-processing.md  ADR-006-simple-folder-structure.md  ADR-007-research-streams-architecture.md  ADR-008-enhanced-zotero-integration.md  architecture.md  cli.md  configuration.md  copilot-auto-approval.md  data-models-architecture.md  development-setup.md  development-timeline.md  information-flow-diagram.drawio  kg-dead-letter-triage-2026-07-07.md  kg-extraction-context-length.md  old-complex-diagram.drawio  ollama-concurrency.md  ontologia.md  quick-start.md  qwen3-family-evaluation.md  rating-system.md  research-streams-guide.md  roadmap.md  source-configuration.md  zotero-integration.md
docs/concepts/: chat.md  citation.md  graph-node.md  job.md  literature-review-report.md  note.md  paper-metadata.md  paper-summary.md  search-criteria.md  smart-tag.md  source.md  stream.md  transclusion.md  wiki-link.md  zotero-collection.md  zotero-item.md
docs/diagrams/: 01_system_overview.html  01_system_overview.py  02_zotero_integration.html  02_zotero_integration.py  02a_zotero_classes.html  02b_zotero_state.html  03_stream_update_flow.html  03_stream_update_flow.py  04_vault_data_model.html  04_vault_data_model.py  05_transport_auth.html  05_transport_auth.py  06_process_supervision.html  06_process_supervision.py  07a_compute_pool_topology.html  07a_compute_pool_topology.py  07b_compute_pool_contention.html  07b_compute_pool_contention.py
docs/reflection/: module-map.html  module-map.py
docs/wiki/: README.md  architecture.md  cli.md  configuration.md  data-models.md  deployment-models.md  features.md  installation.md  roadmap.md  sources.md  streams.md  zotero.md
outputs/: .gitkeep
prisma/: connectivity.py  coordinator.py
prisma/agents/: __init__.py  analysis_agent.py  chat_agent.py  report_agent.py  search_agent.py  zotero_agent.py
prisma/cli/: main.py  prisma_cli.py
prisma/server/: access_log.py  app.py  kg_app.py  log_setup.py  static.py  supervisor.py  web_app.py
prisma/services/: backoff.py  chat_llm.py  chat_prompts.py  chat_tools.py  chroma_service.py  dedup.py  graphify_service.py  injection_defense.py  knowledge_graph_client.py  knowledge_graph_service.py  renderer.py  research_stream_manager.py  resource_lock.py  stream_runner.py  vault.py  zotero.py
prisma/storage/: local_db.py  pending_queue.py
prisma/utils/: config.py  text.py
scripts/: test_batch_relevance.py  test_batch_relevance_scale.py
src/: README.md  coordinator.py
src/agents/: __init__.py  analysis_agent.py  report_agent.py  search_agent.py  zotero_agent.py
src/cli/: main.py  prisma_cli.py
src/services/: research_stream_manager.py
src/utils/: config.py
tests-sets/: README.md  conftest.py  offline.yaml  run-all.sh  run-e2e.sh  run-local-zotero.sh  run-mocked.sh  run-web-api.sh  web-api.yaml
tests-sets/e2e/: README.md  conftest.py  test_review_flow.py  (+1 more)
ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
(+90 files in other folders)
