[project]
name = "prisma"
version = "0.1.0"
description = "Automated Literature Review Tool"
authors = [
    {name = "CServinL", email = "8943596+CServinL@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "requests",
    "pyzotero",
    "pydantic",
    "click (>=8.2.1,<9.0.0)",
    "colorama",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "docu-craft>=0.3.1",
    "watchdog>=6.0",
    "nltk>=3.9",
    "chromadb>=0.6",
    "kuzu>=0.11",
    "semchunk>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black", 
    "flake8",
    "mypy"
]

[project.scripts]
prisma = "prisma.cli.prisma_cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["prisma*"]

[project.urls]
Homepage   = "https://github.com/CServinL/prisma"
Repository = "https://github.com/CServinL/prisma"
Issues     = "https://github.com/CServinL/prisma/issues"
Funding    = "https://github.com/sponsors/CServinL"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests-sets", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "zotero_api: marks tests that use real Zotero API",
    "local_zotero: marks tests that need Zotero Desktop running",
    "web_api: marks tests that need Zotero Web API credentials",
    "online: marks tests that need internet access",
    "e2e: marks end-to-end tests",
]
[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
